@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Randomization of current parameters is now available
+  through a new top-level push-button. (EXPERIMENTAL)
 - Updated for the newer Qt5 development tools (>= 5.13).
 - Per instance custom tuning (micro-tonal) option has
   been added to the previously existing global settings
